--- a/build.gradle
+++ b/build.gradle
@@ -10,13 +10,14 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
 
-    implementation 'org.seleniumhq.selenium:selenium-java:4.15.0'
+    implementation 'org.seleniumhq.selenium:selenium-java:4.20.0'
     implementation 'io.github.bonigarcia:webdrivermanager:5.6.3'
-
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.2'
     implementation 'org.seleniumhq.selenium:selenium-devtools-v119:4.15.0'
 
     implementation 'org.slf4j:slf4j-api:2.0.9'
     implementation 'ch.qos.logback:logback-classic:1.4.11'
+    testImplementation 'org.seleniumhq.selenium:selenium-chrome-driver:4.20.0'
 
     implementation 'org.awaitility:awaitility:4.2.0'
 }
